fixed background spacing issue, fixed contact-bar component in mobile view

--- a/src/app/contact-bar/contact-bar.component.css
+++ b/src/app/contact-bar/contact-bar.component.css
@@ -1,6 +1,6 @@
 .contact-bar {
     min-width: 100%;
-    margin-top: 5%;
+    margin-top: 1%;
     padding: 1%;
     justify-content: end;
     background-color: #AEC9F6;
