--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -4,7 +4,7 @@ nav {
 }
 
 .collapse {
-    background-color: #F5F5F5;
+    background-color: #F8F9FA;
     min-width: 100%;
 }
 
